[gd_scene load_steps=9 format=3 uid="uid://bch8o3ovx3pom"]

[ext_resource type="Script" path="res://scenes/battle/hud/pause_menu.gd" id="1_hhvgv"]
[ext_resource type="FontFile" uid="uid://bole0tasrv4tw" path="res://scenes/data/fonts/Rakkas-Regular.ttf" id="2_jpu1p"]
[ext_resource type="Script" path="res://scenes/common/autopause_node.gd" id="2_yxtsj"]
[ext_resource type="FontFile" uid="uid://7uaw5jndvhyl" path="res://scenes/data/fonts/Aleo-Regular.ttf" id="3_qcm4y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lok7g"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_po01f"]
bg_color = Color(0.937255, 0.901961, 0.870588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.223529, 0.168627, 0.105882, 0.698039)

[sub_resource type="LabelSettings" id="LabelSettings_jrk2x"]
font = ExtResource("2_jpu1p")
font_size = 46
font_color = Color(0.360784, 0.254902, 0.113725, 1)
shadow_color = Color(0, 0, 0, 0.572549)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_621nr"]

[node name="BattlePauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhvgv")
forfeit_button_path = NodePath("Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/ForfeitButton")
resume_button_path = NodePath("Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/ResumeButton")
save_button_path = NodePath("Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SaveButton")
load_button_path = NodePath("Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/LoadButton")
settings_button_path = NodePath("Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SettingsButton")
quit_to_title_button_path = NodePath("Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/QuitToTitleButton")

[node name="AutopauseNode" type="Node" parent="."]
script = ExtResource("2_yxtsj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.345098)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -178.0
offset_right = 123.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lok7g")
metadata/_edit_group_ = true

[node name="Panel" type="PanelContainer" parent="Panel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_po01f")

[node name="MarginContainer" type="MarginContainer" parent="Panel/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_jrk2x")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qcm4y")
text = "Resume"
text_overrun_behavior = 4

[node name="ForfeitButton" type="Button" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qcm4y")
text = "Forfeit"
text_overrun_behavior = 4

[node name="SaveButton" type="Button" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qcm4y")
text = "Save"
text_overrun_behavior = 4

[node name="LoadButton" type="Button" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qcm4y")
text = "Load"
text_overrun_behavior = 4

[node name="SettingsButton" type="Button" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qcm4y")
text = "Settings"
text_overrun_behavior = 4

[node name="HSeparator" type="HSeparator" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_621nr")

[node name="QuitToTitleButton" type="Button" parent="Panel/Panel/MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qcm4y")
text = "Quit to Title"
text_overrun_behavior = 4

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
